clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_asum<float, float> = rocblas_sasum;
template <>
static constexpr auto rocblas_asum<double, double> = rocblas_dasum;
template <>
static constexpr auto rocblas_asum<rocblas_float_complex, float> = rocblas_scasum;
template <>
static constexpr auto rocblas_asum<rocblas_double_complex, double> = rocblas_dzasum;
template <>
static constexpr auto rocblas_asum_batched<float, float> = rocblas_sasum_batched;
template <>
static constexpr auto rocblas_asum_batched<double, double> = rocblas_dasum_batched;
template <>
static constexpr auto rocblas_asum_batched<rocblas_float_complex, float> = rocblas_scasum_batched;
template <>
static constexpr auto rocblas_asum_batched<rocblas_double_complex, double> = rocblas_dzasum_batched;
template <>
static constexpr auto rocblas_asum_strided_batched<float, float> = rocblas_sasum_strided_batched;
template <>
static constexpr auto rocblas_asum_strided_batched<double, double> = rocblas_dasum_strided_batched;
template <>
static constexpr auto
    rocblas_asum_strided_batched<rocblas_float_complex, float> = rocblas_scasum_strided_batched;
template <>
static constexpr auto
    rocblas_asum_strided_batched<rocblas_double_complex, double> = rocblas_dzasum_strided_batched;
template <>
static constexpr auto rocblas_nrm2<float, float> = rocblas_snrm2;
template <>
static constexpr auto rocblas_nrm2<double, double> = rocblas_dnrm2;
template <>
static constexpr auto rocblas_nrm2<rocblas_float_complex, float> = rocblas_scnrm2;
template <>
static constexpr auto rocblas_axpy_strided_batched<rocblas_half> = rocblas_haxpy_strided_batched;
template <>
static constexpr auto rocblas_axpy_strided_batched<float> = rocblas_saxpy_strided_batched;
template <>
static constexpr auto rocblas_axpy_strided_batched<double> = rocblas_daxpy_strided_batched;
template <>
static constexpr auto
    rocblas_axpy_strided_batched<rocblas_float_complex> = rocblas_caxpy_strided_batched;
template <>
static constexpr auto
    rocblas_axpy_strided_batched<rocblas_double_complex> = rocblas_zaxpy_strided_batched;